--- a/AbLogServer.Client/Pages/Index.razor
+++ b/AbLogServer.Client/Pages/Index.razor
@@ -16,6 +16,10 @@
     <MudTabPanel Text="Telegram bot">
         <TelegramBotConfigComponent />
     </MudTabPanel>
+    @*@if (_store is ParametersStorageLocalService)
+    {
+
+    }*@
     <MudTabPanel Text="About">
         <span>Разное ...</span>
     </MudTabPanel>
