--- a/RazorLib/Shared/hardwares/HardwareNavTitleComponent.razor
+++ b/RazorLib/Shared/hardwares/HardwareNavTitleComponent.razor
@@ -46,5 +46,5 @@
 
     bool IsExpand = false;
 
-    static Regex rx_pt = new Regex(@"^pt=\d$", RegexOptions.Compiled);
+    static Regex rx_pt = new Regex(@"^pt=\d+$", RegexOptions.Compiled);
 }
