--- a/RazorLib/Shared/html/HtmlCheckboxTranslatorComponent.razor
+++ b/RazorLib/Shared/html/HtmlCheckboxTranslatorComponent.razor
@@ -3,9 +3,11 @@
 @using MudBlazor;
 @using SharedLib;
 
+@inject ClientConfigModel _conf
 @inject ISnackbar _snackbar
 
-<input type="checkbox" @bind="IsChecked" class="form-check-input" />
+<input type="checkbox" @bind="IsChecked" name="@InputValue" class="form-check-input" aria-describedby="@($"{InputName}Help")" />
+<div id="@($"{InputName}Help")" class="form-text mb-3">@((MarkupString)_conf.MetadataInput.FirstOrDefault(x => x.Key.Equals(InputName, StringComparison.OrdinalIgnoreCase)).Value)</div>
 
 @code {
     [Parameter, EditorRequired]
