--- a/RemoteClient/Shared/MainLayout.razor
+++ b/RemoteClient/Shared/MainLayout.razor
@@ -10,7 +10,7 @@
     </div>
 
     <main>
-        <div class="top-row px-4 bg-body-tertiary">
+        <div class="top-row px-4 bg-body-tertiary" style="z-index:5;">
             <a href="https://ab-log.ru" target="_blank">ab-log.ru</a>
         </div>
 
