--- a/RazorLib/Shared/hardwares/HardwareNavButtonComponent.razor
+++ b/RazorLib/Shared/hardwares/HardwareNavButtonComponent.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Text.RegularExpressions;
 @using System.Collections.Specialized;
+@using MudBlazor
 @using RazorLib.Shared.navs.pills;
 @using RazorLib.Shared.html;
 @using System.Web;
@@ -7,6 +8,7 @@
 @using System.Collections.Concurrent;
 
 @inherits ReloadPageComponentBaseModel
+@implements IDisposable
 
 @inject ClientConfigModel _conf
 
@@ -20,19 +22,30 @@
 }
 else if (IsExpand)
 {
-    <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <div class="input-group mb-3">
-            <input @bind-value="PortEntry.Name" @bind-value:event="oninput" type="text" class="form-control" placeholder="Имя порта" aria-label="Имя порта">
-            <button disabled="@(string.IsNullOrWhiteSpace(PortEntry.Name))" @onclick="UpdatePortName" class="btn btn-outline-secondary" type="button" id="button-addon2">Сохранить</button>
+    if (string.IsNullOrEmpty(this.HtmlSource))
+    {
+        <MudAlert Severity="Severity.Error">Данные отсутствуют</MudAlert>
+    }
+    else
+    {
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            @if (PortEntry.Id > 0)
+            {
+                <div class="input-group mb-3">
+                    <input @bind-value="PortEntry.Name" @bind-value:event="oninput" type="text" class="form-control" placeholder="Имя порта" aria-label="Имя порта">
+                    <button disabled="@(string.IsNullOrWhiteSpace(PortEntry.Name))" @onclick="UpdatePortName" class="btn btn-outline-secondary" type="button" id="button-addon2">Сохранить</button>
+                </div>
+            }
+
+            <HardwareNavTitleComponent PagePath="@PagePath" TitleText="@Text" />
+            <HardwaresNavPillsComponent @ref="refHtmlRoot" HtmlSource="@HtmlSource" ReloadPage="@ReloadPage" />
+            @if (!AutoLoadAndExpand)
+            {
+                <button @onclick="Expand" type="button" class="btn-close" aria-label="Close"></button>
+            }
         </div>
 
-        <HardwareNavTitleComponent PagePath="@PagePath" TitleText="@Text" />
-        <HardwaresNavPillsComponent @ref="refHtmlRoot" HtmlSource="@HtmlSource" ReloadPage="@ReloadPage" />
-        @if (!AutoLoadAndExpand)
-        {
-            <button @onclick="Expand" type="button" class="btn-close" aria-label="Close"></button>
-        }
-    </div>
+    }
 }
 else
 {
@@ -52,7 +65,7 @@ else
     public bool AutoLoadAndExpand { get; set; } = false;
 
     bool IsExpand = false;
-
+    CancellationToken cancellationToken = new CancellationToken();
     EntryModel PortEntry = new();
 
     public async Task Expand()
@@ -63,8 +76,7 @@ else
 
         await GetData();
     }
-    static SemaphoreSlim _syncLock = new SemaphoreSlim(3, 3);
-    static BlockingCollection<Task> tasks = new();
+    static SemaphoreSlim _syncLock = new SemaphoreSlim(5, 5);
 
     static Regex port_num = new(@"^\d+$", RegexOptions.Compiled);
 
@@ -87,21 +99,26 @@ else
                 StateHasChanged();
                 await _syncLock.WaitAsync();
 
-                EntriyResponseModel rest = await _hardwares.CheckPortHardware(new PortHardwareCheckRequestModel() { PortNum = int.Parse(path_parameters.Get("pt")!), HardwareId = Id, CreatePortIfNoptExist = true });
+                EntriyResponseModel rest = await _hardwares.CheckPortHardware(new PortHardwareCheckRequestModel() { PortNum = int.Parse(path_parameters.Get("pt")!), HardwareId = Id, CreatePortIfNoptExist = true }, cancellationToken);
 
                 showMessages?.ShowMessages(rest.Messages);
-                if (!rest.IsSuccess)
-                    return;
+                if (rest.IsSuccess)
+                {
+                    PortEntry = rest.Entry ?? new();
 
-                PortEntry = rest.Entry ?? new();
-
-                if (AutoLoadAndExpand)
-                    await Expand();
+                    if (AutoLoadAndExpand)
+                        await Expand();
+                }
 
                 _syncLock.Release();
                 IsBusyProgress = false;
                 StateHasChanged();
             });
         }
+    }
+
+    public void Dispose()
+    {
+        cancellationToken.ThrowIfCancellationRequested();
     }
 }
