--- a/RazorLib/Shared/settings/TelegramBotConfigComponent.razor
+++ b/RazorLib/Shared/settings/TelegramBotConfigComponent.razor
@@ -19,14 +19,12 @@
                     <MudSpacer />
                 </ToolBarContent>
                 <HeaderContent>
-                    <MudTh>Id</MudTh>
-                    <MudTh>Name</MudTh>
-                    <MudTh>UserName</MudTh>
+                    <MudTh>Пользователь</MudTh>
+                    <MudTh>Права</MudTh>
                 </HeaderContent>
                 <RowTemplate>
                     <MudTd DataLabel="Id">@context.Id</MudTd>
                     <MudTd DataLabel="Name">@context.Name</MudTd>
-                    <MudTd DataLabel="UserName">@context.UserName</MudTd>
                 </RowTemplate>
                 <NoRecordsContent>
                     <MudText>No matching records found</MudText>
