--- a/RazorLib/Shared/settings/TelegramBotConfigComponent.razor
+++ b/RazorLib/Shared/settings/TelegramBotConfigComponent.razor
@@ -74,6 +74,8 @@
                     </PagerContent>
                 </MudTable>
             </form>
+            <br />
+            <SystemCommandsListComponent />
         }
     </div>
 </div>
